<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" comment="Application name. Duplicated in sync_conflict_keep_local_new for sync context">Hirameki</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="rebuild" comment="Generic rebuild action. Duplicated in rebuild_cram_label for filtered deck context">Rebuild</string>
    <string name="empty_cards_action" comment="Generic empty action. Duplicated in empty_cram_label for filtered deck context">Empty</string>
    <string name="deck_options" comment="Generic deck options label. Duplicated in menu__deck_options for menu context">Deck options</string>
    <string name="add_card" comment="Add card button. Duplicated in menu_add as case-insensitive match">Add card</string>
    <string name="get_shared" comment="Button to get shared decks. Duplicated in menu_get_shared_decks for menu context">Get shared decks</string>
    <string name="search_decks" maxLength="28">Search decks</string>
    <string name="close">Close</string>
    <string name="more_options" comment="Generic more options label. Duplicated in whiteboard_more_options for whiteboard context">More options</string>
    <string name="custom_study" maxLength="28">Custom Study</string>
    <string name="unanswer_card">Unanswer card</string>
    <string name="unbury" maxLength="28">Unbury</string>
    <string name="new_deck">Create deck</string>
    <string name="new_dynamic_deck">Create filtered deck</string>
    <string name="add" comment="Generic add action. Duplicated in import_message_add for import context">Add</string>
    <string name="edit">Edit</string>
    <string name="unknown_rating">Unknown rating</string>
    <string name="fab_menu_expanded">Expanded</string>
    <string name="fab_menu_collapsed">Collapsed</string>
    <string name="fab_menu_toggle">Toggle menu</string>
    <string name="back" comment="Generic back text. Duplicated in previewer_back and back_field_name for specific contexts">back</string>
    <string name="preview" comment="Generic preview label. Duplicated in card_editor_preview_card for card editor context">Preview</string>
    <string name="note_type_not_found_for_template_editor">Unable to open card template editor: note type not found</string>
    <string name="daily_limit_reached">There are more new cards available, but the daily limit has been reached. You can increase the limit in options, but please bear in mind that the more new cards you introduce, the higher your short-term review workload will become.</string>
    <string name="study_more">If you wish to study outside of the regular schedule, you can use the %1$s feature.</string>
    <string name="next_review_in">Next review in:</string>
    <string name="sync_now">Sync now</string>
    <string name="loading">Loading…</string>
    <string name="sync_starting">Sync starting…</string>
    <string name="syncing">Syncing…</string>
    <string name="filter" comment="Generic filter label. Duplicated in deck_conf_cram_filter for cram deck context">Filter</string>
    <string name="card_browser_deselect_all" comment="Deselect all in card browser. Duplicated in deselect_all for generic context">Deselect all</string>
    <string name="deselect_all" comment="Generic deselect all. Duplicated in card_browser_deselect_all for browser context">Deselect all</string>
...
