...
    <string name="help" comment="Title of the help menu and button to open it." maxLength="28">Help</string>
    <string name="drawing" comment="Menu entry to create a drawing to attach to a card. Also a title.">Drawing</string>
    <string name="send_feedback" comment="Menu entry in the 'Help>Support ankidroid' menu, that opens the web page explaining how to send feedback.">Send feedback</string>
    <string name="studyoptions_start" comment="Title of the Reviewer activity. Also the button to open it.">Study</string>

    <!-- Reviewer -->
    <string name="expand" comment="In the deck picker: accessibility label of the buttons that display the subdecks of a deck.">Expand</string>
    <string name="collapse" comment="In the deck picker: accessibility label of the buttons that hide the subdecks of a deck.">Collapse</string>
    <string name="menu_import" comment="Title of the import page and the button to open it." maxLength="28">Import</string>
    <string name="no_cards_placeholder_title" comment="Text shown the first time AnkiDroid is opened, to explain to the user why they can't yet review.">Collection is empty</string>
    <string name="no_cards_placeholder_description" comment="Text shown the first time AnkiDroid is opened, to explain what should be their first action.">Start adding cards
using the + icon.</string>
    <string name="type_answer_hint" comment="In the reviewer. When the user use note type with hint. It's the default content of the text field in which the user is invited to type their answer. It disappears as soon as the user start to type.">Type answer</string>
    <string name="show_answer" comment="When displaying the question side of a card. This is the label of a button that display the answer side." maxLength="41">Show answer</string>
    <string name="hide_answer" comment="In the previewer, when the answer side is displayed. This is the label of the button that sends back to the question side.">Hide answer</string>
    <string name="ease_button_again" comment="In the reviewer, in the answer side. Label of the button that request the card to be shown again soon." maxLength="41">Again</string>
...

    <!-- flashcard_portrait.xml -->
    <string name="undo" comment="When tapping on this text, the last action is undone." maxLength="28">Undo</string>
    <string name="redo" comment="Menu entry that allows to redo action that was just undone." maxLength="28">Redo</string>
    <string name="undo_action_whiteboard_last_stroke" comment="One of the display patterns of 'Undo' item on the action menu in the Study Screen. It is shown as the title of the item when the whiteboard (handwriting) feature is enabled and visible and has any strokes (handwritten lines)" maxLength="28">Undo stroke</string>
    <string name="move_all_to_deck">Move all to deck</string>
    <string name="rename_deck" maxLength="28">Rename deck</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="browse_cards">Browse cards</string>
    <string name="edit_deck_description" comment="edit the deck description">Edit description</string>
    <string name="menu_add" comment="Generic add button. Duplicated in menu_add_note and add_card for different contexts" maxLength="28">Add Card</string>
    <string name="menu_add_note" comment="Add note button. Duplicated with menu_add as case-insensitive match" maxLength="28">Add Card</string>
    <string name="menu_my_account" comment="Label of the window in which the user should enter their account. This text can't be found in AnkiDroid directly.">Sync account</string>
...
    grant AnkiDroid the 'Storage' permission. This needs to be a fairly generic message as implementations
    of the permissions/app info screen will differ between devices. -->
    <string name="menu_disable_voice_playback">Disable voice playback</string>
    <string name="directory_inaccessible">Hirameki directory is inaccessible</string>
    <string name="startup_no_storage_permission">Please grant AnkiDroid the ‘Storage’ permission to continue</string>
    <string name="rebuild_filtered_deck" tools:ignore="UnusedResources">Rebuilding filtered deck…</string>
    <string name="rebuild_cram_label" comment="Rebuild button for filtered decks. Duplicated in rebuild for generic context" maxLength="28">Rebuild</string>
    <string name="empty_cram_label" comment="Empty button for filtered decks. Duplicated in empty_cards_action for generic context" maxLength="28">Empty</string>
    <string name="create_subdeck">Create subdeck</string>
    <string name="empty_filtered_deck" tools:ignore="UnusedResources">Emptying filtered deck…</string>
    <string name="search_deck" comment="Deck search for selecting it">Deck Search</string>
    <string name="empty_deck">This deck is empty</string>
    <string name="search_for_download_deck" comment="Deck search value for downloading deck" maxLength="28">Deck Search</string>
    <string name="invalid_deck_name">Invalid deck name</string>
    <string name="studyoptions_congrats_finished">Congratulations! You have finished for today.</string>
...
    <string name="cancel_sync_confirm" tools:ignore="UnusedResources">Do you want to cancel the sync?</string>
    <string name="continue_sync" tools:ignore="UnusedResources">Continue sync</string>
    <string name="sync_cancelled" tools:ignore="UnusedResources">Sync cancelled</string>
    <string name="sync_cancel_message" tools:ignore="UnusedResources">Cancelling…
This may take some time.</string>
    <string name="syncing_media">Syncing media</string>
    <string name="export_deck" maxLength="28">Export deck</string>

    <!-- Card template editor -->
    <string name="export_collection">Export collection</string>
    <string name="nothing">Nothing</string>
    <string name="title_activity_template_editor">Card types</string>
    <string name="card_template_editor_front">Front template</string>
...
